fix(): newsletter spacing

--- a/src/components/pages/landing-page/landing-page.scss
+++ b/src/components/pages/landing-page/landing-page.scss
@@ -51,7 +51,6 @@ em {
   overflow: hidden;
   position: relative;
   margin-bottom: 278px;
-  padding-block-end: 96px;
 
   .ui-container {
     display: flex;
