--- a/src/components/pages/solution-page/solution-page.scss
+++ b/src/components/pages/solution-page/solution-page.scss
@@ -121,6 +121,11 @@
   margin-block-end: 96px;
 }
 
+
+#newsletter {
+  margin-block-end: 160px;
+}
+
 // TODO: Move to generic components
 .ui-fancy-underline {
   display: inline-block;
